GeoNode/kubernetes_geonode_prod/geonode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geonode
  namespace: <nird-namespace>
  labels:
    app: geonode
spec:
  replicas: 1
  selector:
    matchLabels:
      name: geonode
      app: geonode
  template:
    metadata:
      labels:
        name: geonode
        app: geonode
    spec:
      imagePullSecrets:
        - name: nina-gitlab-com
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: <database_pvc>
        - name: geodatadir
          persistentVolumeClaim:
            claimName: <geodatadir_pvc>
        - name: static
          persistentVolumeClaim:
            claimName: <static_pvc>
        - name: media
          persistentVolumeClaim:
            claimName: <media_pvc>
        - name: rabbitmq
          persistentVolumeClaim:
            claimName: <rabbitmq_pvc>
      containers:
        - name: postgres
          image: geonode/postgis:10
          imagePullPolicy: Always
          resources: 
            requests:
              cpu: 1024m
              memory: 2048M
            limits:
              cpu: 1024m
              memory: 2048M
          volumeMounts:
            - name: database
              mountPath: /var/lib/postgresql/data/
              mountPropagation: HostToContainer
              readOnly: false 
        - name: geoserver
          image: registry.gitlab.com/nina-data/geonode/kubernetes_falk_custom/geoserver
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - 'curl --fail --silent --write-out ''HTTP CODE : %{http_code}
  
                  '' --output /dev/null http://127.0.0.1:8080/geoserver/rest/workspaces/geonode.html'
            failureThreshold: 1
            periodSeconds: 60
            timeoutSeconds: 10
          resources:
             requests:
               cpu: 1024m
               memory: 2048M
             limits:
               cpu: 1024m
               memory: 2048M
          volumeMounts:
            - name: geodatadir
              mountPath: /spcgeonode-geodatadir/
              mountPropagation: HostToContainer
              readOnly: false 
        - name: django
          image: registry.gitlab.com/nina-data/geonode/kubernetes_falk_custom/django
          imagePullPolicy: Always
          command:
            - /spcgeonode/scripts/spcgeonode/django/docker-entrypoint.sh
          args:
            - uwsgi
            - --chdir=/spcgeonode
            - --module=geonode.wsgi
            - --socket=:8000
            - --http=127.0.0.1:8001
            - --processes=5
            - --buffer-size=8192
          livenessProbe:
            exec:
              command:
              - 'curl --fail --silent --write-out ''HTTP CODE : %{http_code}

                '' --output /dev/null http://127.0.0.1:8001/'
            failureThreshold: 1
            periodSeconds: 60
            timeoutSeconds: 10
          resources:
             requests:
               cpu: 1024m
               memory: 2048M
             limits:
               cpu: 1024m
               memory: 2048M
          volumeMounts:
            - name: static
              mountPath: /spcgeonode-static/
              mountPropagation: HostToContainer
              readOnly: false 
            - name: media
              mountPath: /spcgeonode-media/
              mountPropagation: HostToContainer
              readOnly: false 
        - name: celery
          image: registry.gitlab.com/nina-data/geonode/kubernetes_falk_custom/django
          imagePullPolicy: Always
          args:
            - celery
            - worker
            - --app=geonode.celery_app:app
            - -l
            - info
            - -E
        livenessProbe:
        exec:
        command:
        - 'curl --fail --silent --write-out ''HTTP CODE : %{http_code}

          '' --output /dev/null http://127.0.0.1:8001/'
      failureThreshold: 1
      periodSeconds: 60
      timeoutSeconds: 10
          resources:
             requests:
               cpu: 1024m
               memory: 4096M
             limits:
               cpu: 2048m
               memory: 8192M
          volumeMounts:
            - mountPath: /spcgeonode-static/
              name: static
              mountPropagation: HostToContainer
              readOnly: false 
            - mountPath: /spcgeonode-media/
              name: media
              mountPropagation: HostToContainer
              readOnly: false 
        - name: celerybeat
          image: registry.gitlab.com/nina-data/geonode/kubernetes_falk_custom/django
          imagePullPolicy: Always
          args:
            - celery
            - beat
            - --app=geonode.celery_app:app
            - --pidfile=/celerybeat.pid
            - -l
            - info
    livenessProbe:
      exec:
        command:
        - 'curl --fail --silent --write-out ''HTTP CODE : %{http_code}

          '' --output /dev/null http://127.0.0.1:8001/'
      failureThreshold: 1
      periodSeconds: 60
      timeoutSeconds: 10
          resources:
             requests:
               cpu: 1024m
               memory: 2048M
             limits:
               cpu: 1024m
               memory: 2048M
          volumeMounts:
            - mountPath: /spcgeonode-static/
              name: static
              mountPropagation: HostToContainer
              readOnly: false 
            - mountPath: /spcgeonode-media/
              name: media
              mountPropagation: HostToContainer
              readOnly: false 
        - name: celerycam
          image: registry.gitlab.com/nina-data/geonode/kubernetes_falk_custom/django
          imagePullPolicy: Always
          args:
            - celery
            - events
            - --app=geonode.celery_app:app
            - --pidfile=/celeryev.pid
            - --camera=django_celery_monitor.camera.Camera
            - --frequency=2.0
            - -l
            - info
    livenessProbe:
      exec:
        command:
        - 'curl --fail --silent --write-out ''HTTP CODE : %{http_code}

          '' --output /dev/null http://127.0.0.1:8001/'
      failureThreshold: 1
      periodSeconds: 60
      timeoutSeconds: 10
          resources:
             requests:
               cpu: 1024m
               memory: 2048M
             limits:
               cpu: 1024m
               memory: 2048M
          volumeMounts:
            - mountPath: /spcgeonode-static/
              name: static
              mountPropagation: HostToContainer
              readOnly: false 
            - mountPath: /spcgeonode-media/
              name: media
              mountPropagation: HostToContainer
              readOnly: false 
        - name: rabbitmq
          image: rabbitmq:3.7-alpine
          imagePullPolicy: Always
          resources:
             requests:
               cpu: 1024m
               memory: 2048M
             limits:
               cpu: 1024m
               memory: 2048M
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq
              mountPropagation: HostToContainer
              readOnly: false 
        - name: nginx
          image: registry.gitlab.com/nina-data/geonode/kubernetes_falk_custom/nginx
          imagePullPolicy: Always
          ports: 
          - name: web  
            containerPort: 80
          - name: webs  
            containerPort: 443
          resources:
             requests:
               cpu: 1024m
               memory: 2048M
             limits:
               cpu: 1024m
               memory: 2048M
          volumeMounts:
            - mountPath: /spcgeonode-static/
              name: static
              mountPropagation: HostToContainer
              readOnly: false 
            - mountPath: /spcgeonode-media/
              name: media
              mountPropagation: HostToContainer
              readOnly: false
