GeoNode/kubernetes_geonode_prod/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: falk-ns9693k
  labels:
    app: django
spec:
  ports:
  - name: django
    port: 8000
    protocol: TCP
    targetPort: django
  selector:
    name: geonode
