GeoNode/kubernetes_geonode_prod/geoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoserver
  namespace: falk-ns9693k
  labels:
    app: geoserver
spec:
  ports:
  - name: geoserver
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: geonode
