GeoNode/kubernetes_geonode_prod/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: falk-ns9693k
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: geonode
