GeoNode/kubernetes_geonode_prod/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: falk-ns9693k
  labels:
    app: rabbitmq
spec:
  ports:
  - name: rabbitmq
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    name: geonode
