GeoNode/kubernetes_geonode_prod/geonode-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geonode
  namespace: <nird-namespace>
  annotations:
    kubernetes.io/tls-acme: "true"     
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app: geonode
spec:
  rules:
  - host: geonode.falk.sigma2.no
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
  tls:
  - hosts:
    - geonode.falk.sigma2.no
    secretName: wildcard-tls
